--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>digital.hub</title><script defer="defer" src="/index.js"></script></head><body><div id="root"></div><script src="./index.js"></script></body></html>
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>digital.hub</title>
+</head>
+
+<body>
+    <div id="root"></div>
+    <script src="./index.js"></script>
+</body>
+
+</html>
