--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <title>digital hub</title>
+    <!-- <title>digital hub</title> -->
 </head>
 
 <body>
     <div id="root"></div>
 
-    <script type="module" src="./index.tsx"></script>
+    <!-- <script type="module" src="./index.tsx"></script> -->
 </body>
 
 </html>
